<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_item_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/sample1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="15dp"
        tools:ignore="MissingConstraints,UnusedAttribute" />
    <!--        android:background="@drawable/image_bg"-->
    <!--        android:clipToOutline="true"-->

    <LinearLayout
        android:id="@+id/ll_item_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_item_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_text"
            style="@style/item_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:maxLines="2"
            android:text="@string/sample1_title"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:text="@string/sample1_address"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/sample_1_price"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:id="@+id/ll_emoji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/iv_chat"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/chat" />

            <TextView
                android:id="@+id/tv_chat_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/chat_number" />

            <ImageView
                android:id="@+id/iv_heart"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/heart" />

            <TextView
                android:id="@+id/tv_heart_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/heart_number" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>