<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:id="@+id/sv_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cl_bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_detail_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_sub_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/detail_title_bg"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_image">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tv_detail_name"
                    style="@style/detail_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sample_1_name"
                    app:layout_constraintStart_toEndOf="@id/iv_profile_image"
                    app:layout_constraintTop_toTopOf="@id/iv_profile_image" />

                <TextView
                    android:id="@+id/tv_detail_address"
                    style="@style/detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sample1_address"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile_image"
                    app:layout_constraintStart_toEndOf="@id/iv_profile_image" />

                <TextView
                    android:id="@+id/tv_manner"
                    style="@style/manner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/manner"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_manner_image"/>

                <ImageView
                    android:id="@+id/iv_manner_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/manner_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/tv_manner_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/manner_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_manner_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_detail_title"
                style="@style/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample1_title"
                app:layout_constraintTop_toBottomOf="@id/cl_sub_message" />

            <TextView
                android:id="@+id/tv_detail_message"
                style="@style/detail_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/detail_message"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fl_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_button"/>

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_bottom_heart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/heart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_1_price"
            app:layout_constraintTop_toTopOf="@id/iv_bottom_heart"
            app:layout_constraintBottom_toBottomOf="@id/iv_bottom_heart"
            app:layout_constraintStart_toEndOf="@id/iv_bottom_heart"
            android:layout_marginStart="30dp"
            style="@style/bottom_price"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_chat"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/button_message"
            android:background="@drawable/bottom_button_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/button_message"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>